Added noSQL CTF

--- a/web/db.yaml
+++ b/web/db.yaml
@@ -3,3 +3,4 @@ dbuser: "admin"
 dbpass: "password"
 dbname: "CTF2"
 secret: "password123"
+mongouri: "mongodb+srv://ctftest1:ctftest1@cluster0.ciubv.mongodb.net/CTF?retryWrites=true&w=majority"
